--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,43 +1,66 @@
+absl-py==0.8.1
 aniso8601==8.0.0
+appdirs==1.4.3
+asgiref==3.2.7
+astor==0.8.0
 astroid==2.3.3
-autopep8==1.5.1
-beautifulsoup4==4.9.0
-certifi==2020.4.5.1
+cachetools==3.1.1
+certifi==2019.11.28
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 colorama==0.4.3
-Django==2.0
-Flask==1.0.2
-Flask-Cors==1.7.0
+distlib==0.3.0
+Django==3.0.5
+filelock==3.0.12
+Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.8
-gmsaas==1.3.1
+gast==0.2.2
+google-auth==1.7.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+grpcio==1.25.0
+h5py==2.10.0
+html5lib==1.0.1
 idna==2.8
+importlib-metadata==1.5.0
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 lazy-object-proxy==1.4.3
 lxml==4.5.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 multitasking==0.0.9
-numpy==1.18.2
+numpy==1.17.4
+oauthlib==3.1.0
+opt-einsum==3.1.0
 pandas==1.0.3
-psutil==5.7.0
-pycodestyle==2.5.0
+protobuf==3.11.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
 pylint==2.4.4
 python-dateutil==2.8.1
 python-dotenv==0.13.0
-python-engineio==3.12.1
-python-socketio==4.5.1
 pytz==2019.3
-requests==2.21.0
-requests-toolbelt==0.9.1
-six==1.14.0
-soupsieve==2.0
-tabulate==0.8.7
-urllib3==1.24.3
-websocket-client==0.57.0
-Werkzeug==1.0.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
+selenium==3.141.0
+six==1.13.0
+sqlparse==0.3.1
+tensorboard==2.0.2
+tensorflow==2.0.0
+tensorflow-estimator==2.0.1
+termcolor==1.1.0
+typed-ast==1.4.1
+urllib3==1.25.7
+virtualenv==20.0.5
+webencodings==0.5.1
+Werkzeug==0.16.0
 wrapt==1.11.2
-yahoofinancials==1.5
 yfinance==0.1.54
+zipp==3.0.0
